--- a/webpages/index.html
+++ b/webpages/index.html
@@ -25,7 +25,7 @@
 
 	<div class="contact1">
 		<div class="container-contact1">
-			<div class="contact1-pic js-tilt" data-tilt>
+			<div class="contact1-pic">
 				<img src="images/img-01.png" alt="IMG">
 			</div>
 
